--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
     "build:pro": "vue-tsc && vitebuild --mode production"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.5.0",
     "element-plus": "^2.3.14",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
     "mockjs": "^1.1.0",
+    "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "typescript": "^5.0.2",
-    "unplugin-auto-import": "^0.16.6",
-    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.5",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-svg-icons": "^2.0.1",
